========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-08-04

  - Made account name components allowed to have two characters (beyond the
    first component). For instance, Assets:Investments:F is now a valid account
    name.


2016-07-11

  - Added parsing a transaction date column to metadata in the CSV importer.


2016-07-01

  - bean-format now accepts input from stdin.


2016-06-30

  - Make it possible for a BALANCES statement to have a WHERE clause. BALANCES
    is now equivalent to

      SELECT account, sum(position) FROM ... WHERE ... GROUP BY account

    Inching one step closer to removing that WHERE clause eventually.


2016-06-18

  - Added support for columns AMOUNT_DEBIT and AMOUNT_CREDIT in the csv
    importer.

  - Merged ongoing progress from 'booking' branch; if you don't use any of the
    in-progress new booking methods, this should not have any effect.

    However, the 'booking_method has changed names and you may have to adjust
    its values if you've been tinkering with it:

    * 'booking_method' used to take on value "SIMPLE" or "FULL" and dispatch
      betwee the current (old) booking implementation and the new one which will
      support many other booking methods. This option is now named
      'experiment_booking_algorithm' (a new option) and takes on the same
      values. The default value is "SIMPLE", which keeps the behavior unchanged.
      Use "FULL" if you want to test out the new booking algorithm: the new
      algorithms should work except for the AVERAGE cost method. WARNING: This
      is still under flux and considered unreleased.

    " 'booking_method': This is a different option now, and takes the value of
      any one of the booking methods visible here:
      https://bitbucket.org/blais/beancount/src/7b9e00e6e19136f680befc1d4322f47cdc294cf6/src/python/beancount/core/data.py?at=booking&fileviewer=file-view-default#data.py-64